@@ -1,7 +1,9 @@
 AUX fix-run-on-ac-bat.patch 1481 SHA256 ee316777bebb36783eb9ec2c3d151a17383eb98b529990cc0e5eb4927f1d8c30 SHA512 7ccd05b0a5360e40458959c599a341bf7b45a850f3b6994820e9e723fe8435c84dd754491fcc433e032002e1e55f1442ca7a650949adbb50414e18cc47f1e1a6 WHIRLPOOL 8167c3cabb16564d8fadb6b8eeaec9963bc9cbbb4cfdd02dcae6ad020015238a37d016ceed15e805d3aafa76abc8523c1baa68fafa5b1c5f0da9f708629f8850
 DIST tlp-gentoo-additions-0.4.tar.bz2 6005 SHA256 2a88298350a2f6238ec7e2d12518f89940a54916dd5beff202a2514ce01a61d4 SHA512 4105232c4844e14d7d35464575d2a36ce87cc40b2b3c112e9435ab2b1d811062fb1a02b44cc5abd183d4a87ede9d711f6d0308d142b58e8c508714874c233be1 WHIRLPOOL 4c81da249a7325c41ccf56a7db9214fa5562665800f469341be5b5566ae0af3c306420ad526d20e38105d9992eb73285d4c80c494e2e0f014fb5c7d9c6e3afd3
+DIST tlp-gentoo-additions-0.5.tar.bz2 2494 SHA256 5511afd48173014375f46fdf5652faf3926f789091017f458ff892f307e87018 SHA512 c634c374ed0f552723ae09681cf670d649c75d62097cd72eef8a4bd240f7efeb803f10ab6feedeae81742cbeebd1aef265a1ed917bda6de1bb38cc47ce58c983 WHIRLPOOL 57dfb12c44249fabe836302e48a0ce6b75d9e007ae8d3164cef2b8622ffbffee951b1460aa7bdaed9cbc3f7e85229dce0f1edb72b1c161ec7c939b97d4f3cc71
 EBUILD tlp-0.4-r1.ebuild 6379 SHA256 3b25dd526f38530cbdad1fbc2b04cbf7200aef5de5f84127a90de827ee4aa268 SHA512 f29df7ed230dec5c9c01057cbad3253b81b6ae3ed2dc2bc444c819812fdd704c118817b2b8a39093bc8a73d075a9e5a247545431aa92abe21e13ee750013ac09 WHIRLPOOL 5359a8db9d12e81e2db512a5fc683ec7020a93120622b695fcac000226b0510889db93b678c21b8dd47d0e99295648d9cf205a88d34e5fe5c5d268172776e375
 EBUILD tlp-0.4.1.ebuild 6340 SHA256 502af5a894e23dbe0b9ba14eaa7d7319e837fa156690866318920e94ca70632d SHA512 fe4a0324d85f9c1b46d0b237c904f3f7c9b6d85978a7ec17260d4738a76ce6e7e6314f903a31ae5ddb16181964b1d142c9777e0bb577ac8b95ac87a9518da11c WHIRLPOOL 97a96b5d8d56850622ec89d1e2c8311127e95c343be87919ae74bfbfa079fb4194d649a75132e33ef4426c3429ef123f11036c2ceee565ee426880106a25a8eb
 EBUILD tlp-0.4.ebuild 5837 SHA256 ce9bb9fd43023fe360f3821cbd48062b56e2cdc748d1bcbb392e6b0baad0626e SHA512 ec101176557fb9bd849523d32f589d1aeadf33d5d527ec18e5c773a6deb04e31e328c917294588fae7edc0276cbcc6e447bc0da0464251fa3e38979647b6bdb6 WHIRLPOOL 95518bd05acef1319aef51b3b03ed89b912c3325a13c54f7247a3a4ed38def1196b6ba73038ed1b9c6aa0272d4944925abe6da36b40beb79654f801b56998706
-MISC ChangeLog 8293 SHA256 7976abc6dfa87dce8d15e804b9be2712a759bac7e670a9a2a98f54c90fe64420 SHA512 506d0853dc0141f27e0d0db039e9c4d4d71796e8fbf8faab83d70a68da677d30006315f33250b24417cc9848dfb75048bb0944f79388a62e6e9790dab3f5a0ca WHIRLPOOL 57ad4d2990b9c9705eea67140ef09e1ad705cd0a066b5a4dce5559108477f9bcfb71aef83a4ad7ab2373e3fecf7c2da9ca69f72bb382463a19e3abed26b1aa92
+EBUILD tlp-0.5.ebuild 4322 SHA256 8d92d603adaafd810d4b48d7aade4aa678a5e88f6a4eae43e271e1c7ccb6e18f SHA512 9d53e830c792350b44cf6987fb3a9c73fc0de65ebb472357ba6302e01f700e4c5658eefad8ea2e28d68ff52c5896052cb3469b4208371b7b83a7088be1fc17c6 WHIRLPOOL 1bc12403333b32ac19dec7ff0f193779ccab588a8b4d2dd748eec505e2033dddf2ea5e86407745cea7089af4b706d07a1deaca4ac5e7707e50378115ed2d1ad0
+MISC ChangeLog 8407 SHA256 5d87e8670fc5c038bd56c140c6a61fb3a79da02f40da855a6c041bc2bf18ebc1 SHA512 f8d8d51e3088a6e89d8bc674375c63febd758245b645ae0e89f060bad26844452f202121cd5c4c62fe7948fc612ae675b0ec3f870a6b484c011d2626eae24269 WHIRLPOOL 27c5b219e0cd11cdaa863cff1b2ee7a3f1731b2663dc1c4401fb9b40350606b964c88e0282a1298d90fee7b2e38602dae813a28f3aebf38fc48e0dd8b072c4b6
 MISC metadata.xml 1589 SHA256 eec4fa7c05adbd3ac30c53bddff2ec75f994499ed35cb13964238f954c155cf4 SHA512 adab01d1595643a1f62ec1169b27f2d294b523ef4b111fd87f5788338932453bd066a81ad63f5f2d36f7f8ca64d2a8649aa9c6ff00207b2ce07ddbd0c9764cb1 WHIRLPOOL 7a4493931b85229a7384b16f355d27cc9b7acf928fafd70471e4a80784d3008b4ceb4a4e352aba70af1ad7dacac914cfcd5c994d0523131d78f46717205ae4c3
