@@ -2,9 +2,14 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*tlp-0.5 (24 Mar 2014)
+
+  24 Mar 2014; Andre Erdmann <dywi@mailerd.de> +tlp-0.5.ebuild
+  Latest upstream release
+
 *tlp-0.4.1 (02 Jan 2014)
 
-  02 Jan 2013; Andre Erdmann <dywi@mailerd.de> tlp-0.4.1.ebuild
+  02 Jan 2014; Andre Erdmann <dywi@mailerd.de> tlp-0.4.1.ebuild
   Latest upstream release, mostly containing compat changes.
 
 *tlp-0.4-r1 (15 Dec 2013)
